# biz-suite-device-bridge

./: .gitignore  AGENTS.md  PLAN.md  README.md  index.html  package-lock.json  package.json  settings.gradle.kts
.github/workflows/: build-android.yml  build-windows.yml  commit-pr-build-artifacts.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/cloud/bizsuite/android/: EscPosNetworkPrinterClient.kt  MainActivity.kt
apps/android/: README.md  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/com/bizsuite/devicebridge/: BridgeForegroundService.kt  CloudBridgeClient.kt  EscPosNetworkPrinterClient.kt  MainActivity.kt
apps/windows/: README.md  index.html  package.json  vite.config.ts
apps/windows/src/: main.ts  styles.css
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows/src-tauri/capabilities/: default.json
apps/windows/src-tauri/src/: main.rs
docs/: cloud-integration-contract.md
downloads/android/: Biz-Suite-Device-Bridge-Android-v0.1.0-debug.apk
scripts/: build-all.ps1  build-all.sh  build-android.ps1  build-android.sh  build-windows.ps1  build-windows.sh  prepare-windows-icon.cjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
