[package]
name = "biz_suite_device_bridge"
version = "0.1.0"
description = "Biz-Suite Device Bridge for Windows"
authors = ["Axellier Ops"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Printing"] }
